[metadata]
name = openhtf
version = 1.6.0
author = The OpenHTF Authors
description = OpenHTF, the open hardware testing framework
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/google/openhtf

[options]
install_requires =
    attr==0.3.2
    colorama==0.4.6
    contextlib2==21.6.0
    inflection==0.5.1
    libusb1==3.1.0
    M2Crypto==0.42.0
    mutablerecords==0.4.1
    pandas==2.2.3
    protobuf==5.28.2
    pyserial==3.5
    PyYAML==6.0.2
    sockjs_tornado==1.0.7
    tornado==6.4.1
    typing_extensions==4.12.2

python_requires = >=3.8

[bdist_wheel]
universal = 1

